@@ -325,35 +325,37 @@ setRlibs <-
                 warningLog(Log, "'qpdf' is needed for checks on size reduction of PDFs")
         }
         if (dir.exists("inst/doc") && do_install) check_doc_contents()
-        if (dir.exists("vignettes")) check_vign_contents()
-        if (dir.exists("inst/doc") && !dir.exists("vignettes")) {
-            pattern <- vignetteEngine("Sweave")$pattern
-            sources <- setdiff(list.files(file.path("inst", "doc"),
-                                          pattern = pattern),
-                               list.files("vignettes", pattern = pattern))
-            buildPkgs <- .get_package_metadata(".")["VignetteBuilder"]
-            if (!is.na(buildPkgs)) {
-                buildPkgs <- unlist(strsplit(buildPkgs, ","))
-                buildPkgs <- unique(gsub('[[:space:]]', '', buildPkgs))
-                engineList <- vignetteEngine(package = buildPkgs)
-                for(nm in names(engineList)) {
-                    pattern <- engineList[[nm]]$pattern
-                    sources <- c(sources,
-                                 setdiff(list.files(file.path("inst", "doc"),
-                                                    pattern = pattern),
-                                         list.files("vignettes", pattern = pattern)))
+        if (dir.exists("vignettes")) check_vign_contents(ignore_vignettes)
+        if (!ignore_vignettes) {
+            if (dir.exists("inst/doc") && !dir.exists("vignettes")) {
+                pattern <- vignetteEngine("Sweave")$pattern
+                sources <- setdiff(list.files(file.path("inst", "doc"),
+                                              pattern = pattern),
+                                   list.files("vignettes", pattern = pattern))
+                buildPkgs <- .get_package_metadata(".")["VignetteBuilder"]
+                if (!is.na(buildPkgs)) {
+                    buildPkgs <- unlist(strsplit(buildPkgs, ","))
+                    buildPkgs <- unique(gsub('[[:space:]]', '', buildPkgs))
+                    engineList <- vignetteEngine(package = buildPkgs)
+                    for(nm in names(engineList)) {
+                        pattern <- engineList[[nm]]$pattern
+                        sources <- c(sources,
+                                     setdiff(list.files(file.path("inst", "doc"),
+                                                        pattern = pattern),
+                                             list.files("vignettes", pattern = pattern)))
+                    }
                 }
-            }
-            sources <- unique(sources)
-            if(length(sources)) {
-                checkingLog(Log, "for old-style vignette sources")
-                msg <- c("Vignette sources only in 'inst/doc':",
-                         strwrap(paste(sQuote(sources), collapse = ", "),
-                                 indent = 2L, exdent = 2L),
-                         "A 'vignettes' directory is required as from R 3.1.0",
-                         "and these will not be indexed nor checked")
-                ## warning or error eventually
-                noteLog(Log, paste(msg, collapse = "\n"))
+                sources <- unique(sources)
+                if(length(sources)) {
+                    checkingLog(Log, "for old-style vignette sources")
+                    msg <- c("Vignette sources only in 'inst/doc':",
+                             strwrap(paste(sQuote(sources), collapse = ", "),
+                                     indent = 2L, exdent = 2L),
+                             "A 'vignettes' directory is required as from R 3.1.0",
+                             "and these will not be indexed nor checked")
+                    ## warning or error eventually
+                    noteLog(Log, paste(msg, collapse = "\n"))
+                }
             }
         }
 
@@ -379,7 +381,7 @@ setRlibs <-
 
         ## Check package vignettes.
         setwd(pkgoutdir)
-        run_vignettes(desc)
+        if (!ignore_vignettes) run_vignettes(desc)
 
     } ## end{ check_pkg }
 
@@ -740,6 +742,8 @@ setRlibs <-
 
     check_build <- function()
     {
+        ## currently only checks vignettes
+        if (!ignore_vignettes) return()
         fv <- file.path("build", "vignette.rds")
         if(!file.exists(fv)) return()
         checkingLog(Log, "'build' directory")
@@ -1997,9 +2001,13 @@ setRlibs <-
         if (!any) resultLog(Log, "OK")
     }
 
-    check_vign_contents <- function()
+    check_vign_contents <- function(ignore_vignettes = FALSE)
     {
         checkingLog(Log, "files in 'vignettes'")
+        if (ignore_vignettes) {
+            resultLog(Log, "SKIPPED")
+            return()
+        }
         ## special case common problems.
         any <- FALSE
         pattern <- vignetteEngine("Sweave")$pattern
@@ -3861,7 +3869,7 @@ setRlibs <-
         ## not required in the package DESCRIPTION file.
         ## Namespace imports must really be in Depends.
         res <- .check_package_depends(pkgdir, R_check_force_suggests,
-                                      check_incoming)
+                                      check_incoming, ignore_vignettes)
         if(any(sapply(res, length) > 0L)) {
             out <- format(res)
             allowed <- c("suggests_but_not_installed",
@@ -4034,7 +4042,7 @@ setRlibs <-
             "control files are performed.  The package is installed into the log",
             "directory and production of the package PDF manual is tested.",
             "All examples and tests provided by the package are tested to see if",
-            "they run successfully.  Code in the vignettes is tested,",
+            "they run successfully.  By default code in the vignettes is tested,",
             "as is re-building the vignette PDFs.",
             "",
             "Options:",
@@ -4054,6 +4062,7 @@ setRlibs <-
             "      --no-manual       do not produce the PDF manual",
             "      --no-vignettes    do not run R code in vignettes nor build outputs",
             "      --no-build-vignettes    do not build vignette outputs",
+            "      --ignore-vignettes    skip all tests on vignettes",
             "      --run-dontrun     do run \\dontrun sections in the Rd files",
             "      --run-donttest    do run \\donttest sections in the Rd files",
             "      --use-gct         use 'gctorture(TRUE)' when running examples/tests",
@@ -4125,6 +4134,7 @@ setRlibs <-
     do_tests <- TRUE
     do_vignettes <- TRUE
     do_build_vignettes <- TRUE
+    ignore_vignettes <- FALSE
     do_manual <- TRUE
     use_gct <- FALSE
     use_valgrind <- FALSE
@@ -4186,9 +4196,13 @@ setRlibs <-
         } else if (a == "--no-rebuild-vignettes") { # pre-3.0.0 version
             stop("'--no-rebuild-vignettes' is defunct: use '--no-build-vignettes' instead",
                  call. = FALSE, domain = NA)
-      } else if (a == "--no-vignettes") {
+        } else if (a == "--no-vignettes") {
             do_vignettes  <- FALSE
-        } else if (a == "--no-manual") {
+        } else if (a == "--ignore-vignettes") {
+            ignore_vignettes  <- TRUE
+            do_vignettes  <- FALSE
+            do_build_vignettes  <- FALSE
+       } else if (a == "--no-manual") {
             do_manual  <- FALSE
         } else if (a == "--no-latex") {
             stop("'--no-latex' is defunct: use '--no-manual' instead",
@@ -4552,9 +4566,13 @@ setRlibs <-
         if (!do_examples && !spec_install) opts <- c(opts, "--no-examples")
         if (!do_tests && !spec_install) opts <- c(opts, "--no-tests")
         if (!do_manual && !spec_install) opts <- c(opts, "--no-manual")
-        if (!do_vignettes && !spec_install) opts <- c(opts, "--no-vignettes")
-        if (!do_build_vignettes && !spec_install)
-            opts <- c(opts, "--no-build-vignettes")
+        if (ignore_vignettes) opts <- c(opts, "--ignore-vignettes")
+        else {
+            if (!do_vignettes && !spec_install)
+                opts <- c(opts, "--no-vignettes")
+            if (!do_build_vignettes && !spec_install)
+                opts <- c(opts, "--no-build-vignettes")
+        }
         if (use_gct) opts <- c(opts, "--use-gct")
         if (use_valgrind) opts <- c(opts, "--use-valgrind")
         if (as_cran) opts <- c(opts, "--as-cran")
